# pulseaudio-simple-loopback

./: .gitignore  LICENSE  README.md  pyproject.toml
pulseaudio_simple_loopback/: loopback_setup.py  loopback_stop.py
